# openweathermap-daily-summary-enriched

./: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.mkdocs  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: c594799a5834_add_weather_daily_summaries_table.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/models/: __init__.py  weather.py
app/repositories/: __init__.py  weather_repository.py
app/routes/: weather.py
app/schemas/: __init__.py  openweathermap_api.py  weather.py
app/usecases/: __init__.py  weather_data_fetcher.py  weather_data_processor.py  weather_service.py
docs/: index.md
docs/api/: weather.md
docs/development/: setup.md
docs/reference/: weather_data_fetcher.md  weather_data_processor.md  weather_repository.md  weather_service.md
tests/: conftest.py  test_api.py  test_data_processor.py  test_migrations.py  test_weather_data_fetcher.py  test_weather_data_processor.py  test_weather_service.py
